eks/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: simple-bank-ingress-http 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt 

spec:
  ingressClassName: nginx 
  rules:
    - host: "api.simplebanktest.com"
      http:
        paths:
          - pathType: Prefix 
            path: "/" 
            backend:
              service:
                name: simple-bank-api-service:
                  port:
                    number:8080
  tls:
    - hosts:
      - api.simplebanktest.com 
      secretName: simple-bank-api-cert
